<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="standalone_app_label">Calendar</string>
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="lunar_label">Lunar</string>
    <string name="solar_label">Solar</string>
    <string name="lunar_calc_label">Lunar</string>
    <string name="january_label">January</string>
    <string name="february_label">February</string>
    <string name="march_label">March</string>
    <string name="april_label">April</string>
    <string name="may_label">May</string>
    <string name="june_label">June</string>
    <string name="july_label">July</string>
    <string name="august_label">August</string>
    <string name="september_label">September</string>
    <string name="october_label">October</string>
    <string name="november_label">November</string>
    <string name="december_label">December</string>
    <string name="all_day_label">All day</string>
    <string name="no_event_label">No event</string>
    <string name="am_label">"<xliff:g id="hour_minute">%1$s</xliff:g> AM"</string>
    <string name="pm_label">"<xliff:g id="hour_minute">%1$s</xliff:g> PM"</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="account_label">Account</string>
    <string name="repeats_label">Repeat</string>
    <string name="no_title_label">(No title)</string>
    <plurals name="Nminutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <string name="day_view">"Day"</string>
    <string name="week_view">"Week"</string>
    <string name="month_view">"Month"</string>
    <string name="year_view">"Year"</string>
    <string name="event_label">"Event"</string>
    <string name="event_view">"Event Information"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit">"Edit event"</string>
    <string name="goto_date">"Go to date"</string>
    <string name="search">"Search"</string>
    <string name="hint_what">"Title"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_short_when">"When"</string>
    <string name="hint_short_repeat">"Repeat"</string>
    <string name="hint_short_reminder">"Reminder"</string>
    <string name="hint_reminder">"Reminder"</string>
    <string name="hint_short_description">"Description"</string>
    <string name="creating_event">"Event saved."</string>
    <string name="saving_event">"Event saved."</string>
    <string name="empty_event">"Empty event not created."</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="edit_event_to_label">End</string>
    <string name="edit_event_from_label">Start</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="reminders_label">Add reminder</string>
    <string name="event_not_found">"Event not found."</string>
    <string name="loading">Loading\u2026</string>
    <string name="edit_event_label">"Details"</string>
    <string name="edit_label">"Edit"</string>
    <string name="delete_label">"Delete"</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="snooze_label">"Snooze"</string>
    <string name="close_label">"Close"</string>
    <string name="label_no_repeat">Don\'t repeat</string>
    <string name="label_every_day">Every day</string>
    <string name="label_every_week">Every week</string>
    <string name="label_every_month">Every month</string>
    <string name="label_every_year">Every year</string>
    <string name="label_custom">Customize</string>
    <string name="label_duration">Duration</string>
    <string name="label_repeat_on">Repeat on</string>
    <string name="at_least_one_weekday_select">You should select at least one day of week.</string>
    <string name="does_not_repeat">Never</string>
    <string name="empty_label">Empty</string>
    <string name="endByDate">until <xliff:g id="date">%s</xliff:g></string>
    <plurals name="endByCount">
        <item quantity="one">for one time</item>
        <item quantity="other">for %d times</item>
    </plurals>
    <string name="daily_interval_other">every %d days</string>
    <string name="every_weekday">"all days of the week"</string>
    <string name="weekly_interval_one">every week %s</string>
    <string name="weekly_interval_other">every %1$d weeks %2$s</string>
    <string name="monthly_interval_other">every %1$d months</string>
    <string name="yearly_interval_other">every %1$d years</string>
    <string name="every_day_combination">every day</string>
    <string name="other_day_combination">every %d days</string>
    <string name="every_week_combination">every week on %s</string>
    <string name="other_week_combination">every %1$d weeks on %2$s</string>
    <string name="every_month_combination_monthday">%s of every month</string>
    <string name="other_month_combination_monthday">every %1$d months %2$s of the month</string>
    <string name="every_month_combination_weekday">every month %s</string>
    <string name="other_month_combination_weekday">every %1$d months %2$s of the month</string>
    <string name="every_year_combination">every year on %s</string>
    <string name="other_year_combination">every %1$d years on %2$s</string>
    <string name="recurrence_full_string_format">This event will repeat %s.</string>
    <string name="modify_event">Change only this event</string>
    <string name="modify_all">Change all events in the series</string>
    <string name="modify_all_following">Change this and all future events</string>
    <string name="new_event_dialog_label">"New event"</string>
    <string name="delete_this_event_title">Delete this event?</string>
    <string name="apply_these_changes">Apply these changes?</string>
    <string name="delete_only_this_event">Only this event</string>
    <string name="delete_following_events">This and future events</string>
    <string name="delete_all_events">All events</string>
    <string name="preferences_title">"Settings"</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_reminder_title">Notifications \u0026 reminders</string>
    <string name="preferences_default_event_duration_title">Default event duration</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="preferences_alerts_ringtone_title">Notification Sound</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default" translatable="false">10</string>
    <string name="preferences_alerts_custom_snooze_delay_title">Ask for reminder snooze delay</string>
    <string name="preferences_alerts_custom_snooze_delay_summary_on">Ask whenever snoozing reminders</string>
    <string name="preferences_alerts_custom_snooze_delay_summary_off">Always use default snooze delay</string>
    <string name="snooze_delay_dialog_title">Set snooze delay</string>
    <string name="preferences_default_snooze_delay_title">Default snooze delay time</string>
    <string name="preferences_default_snooze_delay_dialog">Default snooze delay</string>
    <string name="preferences_default_snooze_delay_default" translatable="false">5</string>
    <string name="accessibility_pick_recurrence">Repeat event</string>
    <string name="accessibility_add_reminder">Add reminder</string>
    <string name="accessibility_remove_reminder">Remove reminder</string>
    <string name="accessibility_reminder_time">Reminder time</string>
    <string name="accessibility_reminder_type">Reminder type</string>
    <plurals name="Nevents">
        
        <item quantity="one">1 event</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> events</item>
    </plurals>
    <plurals name="N_remaining_events">
        
        <item quantity="one">+1 event</item>
        
        <item quantity="other">+<xliff:g id="count">%d</xliff:g> events</item>
    </plurals>
    <string name="repeat_monthly_on_day1">On the %dst</string>
    <string name="repeat_monthly_on_day2">On the %dnd</string>
    <string name="repeat_monthly_on_day3">On the %drd</string>
    <string name="repeat_monthly_on_day4">On the %dth</string>
    <string name="recurrence_end_continously">Forever</string>
    <string name="recurrence_end_date_label">Until a date</string>
    <string name="recurrence_end_date">Until <xliff:g id="date">%s</xliff:g></string>
    <string name="recurrence_end_count_label">For a number of events</string>
    <plurals name="recurrence_end_count">
        <item quantity="one">For <xliff:g id="event_count">%d</xliff:g> event</item>
        <item quantity="other">For <xliff:g id="event_count">%d</xliff:g> events</item>
    </plurals>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="notification_sender_id" translatable="false"></string>
    <string name="user_rejected_calendar_write_permission">This application requires calendar read &amp; write permissions to work properly. Please try again.</string>
    <string name="user_must_grant_calendar_write_permission">This application requires calendar read &amp; write permissions to work properly.</string>
    <string name="calendar_permission_not_granted">Sorry this feature can\'t work. This requires calendar read and write permissions to work properly</string>
    <string name="zero_minutes">0 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="one_and_a_half_hours">1.5 hours</string>
    <string name="two_hours">2 hours</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="agenda_time_start">Start</string>
    <string name="agenda_time_end">End</string>
    <string name="new_event_string">New</string>
    <string name="event_list_string">Agenda</string>
    <string name="calculate_date_string">Calculate</string>
    <string name="settings_string">Settings</string>
    <string name="notification_settings_string">Notification Settings</string>
    <string name="calendar_type_select_title">Calendar Type</string>
    <string name="notification_switch_preference_category_title">Notification switch</string>
    <string name="notification_method_preference_category_title">Notification method</string>
</resources>