<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/common_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/main_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/common_background_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:background="?attr/bottom_bar_drawable"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:layout_height="match_parent" >
            <com.android.calendar.customize.ImageTextView
                android:id="@+id/go_new_event"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/BottomBarButtonStyle"
                android:drawableTop="@drawable/ic_new_event"
                android:text="@string/new_event_string"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:layout_height="match_parent" >
            <com.android.calendar.customize.ImageTextView
                android:id="@+id/go_agenda"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/BottomBarButtonStyle"
                android:drawableTop="@drawable/ic_event_list"
                android:text="@string/event_list_string"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:visibility="gone">
            <com.android.calendar.customize.ImageTextView
                android:id="@+id/go_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/BottomBarButtonStyle"
                android:drawableTop="@drawable/ic_go_date"
                android:text="@string/goto_date"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:layout_height="match_parent" >
            <com.android.calendar.customize.ImageTextView
                android:id="@+id/go_calculate_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/BottomBarButtonStyle"
                android:drawableTop="@drawable/ic_calculate"
                android:text="@string/calculate_date_string"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:layout_height="match_parent" >
            <com.android.calendar.customize.ImageTextView
                android:id="@+id/go_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/BottomBarButtonStyle"
                android:drawableTop="@drawable/ic_settings"
                android:text="@string/settings_string"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>