<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/dialog_bg_no_padding"
    android:orientation="vertical">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_this_event_title"
        android:textColor="?attr/common_text_color_main"
        android:textSize="21sp"/>

    <!-- Delete options -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layoutDirection="rtl"
            android:id="@+id/delete_this"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/delete_only_this_event"
            android:textColor="@color/radio_button_text_color"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/delete_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/delete_following_events"
            android:textColor="@color/radio_button_text_color"
            android:textSize="18sp" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/delete_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/delete_all_events"
            android:textColor="@color/radio_button_text_color"
            android:textSize="18sp" />

    </RadioGroup>

    <!-- Ok, Cancel buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <com.android.calendar.customize.RoundButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="?attr/common_button_background_color"
            android:background="@android:color/white"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@android:string/cancel"
            android:textColor="?attr/common_text_color_main"
            android:textAllCaps="false" />
        <com.android.calendar.customize.RoundButton
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="?attr/common_button_background_color"
            android:background="@android:color/white"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/delete_label"
            android:textColor="?attr/common_text_color_main"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>